@@ -46,6 +46,8 @@
     <person name="Duncan Mak" email="duncan@ximian.com"/>
     <person name="Keith Bottner" email="kbottner@istation.com"/>
     <person name="Mark Crichton" email="crichton@gimp.org"/>
+    <person name="Daniel Morgan" email="danmorg@sc.rr.com"/>
+    <person name="Rodrigo Moya" email="rodrigo@ximian.com"/>
     <person name="Jonathan Pryor" email="jonpryor@vt.edu"/>
 </maintainers>
 
